[project]
name = "flaskr"
version = "0.0.1"
description = "A simple flask application"
authors = [
    { name = "Adefolaju Akinloluwa Ariyo", email = "adefolajuariyo@gmail.com" }
]
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]